# sd-raytracer

./: .gitignore  README.md
.github/workflows/: client.yml  rust.yml
proto/: message.proto
raytracer-client/: build.gradle  settings.gradle
raytracer-client/src/main/java/org/raytracer/: Main.java
raytracer-client/src/main/java/org/raytracer/client/: RaytracerClient.java  Resolution.java  Vec3.java
raytracer-client/src/main/java/org/raytracer/repl/: REPL.java
raytracer-client/src/main/java/org/raytracer/repl/exception/: BadArgumentsException.java  BadCommandException.java
raytracer-client/src/main/proto/: message.proto
raytracer-client/src/test/java/: ThreePicturesGoldenTest.java
raytracer-server/: Cargo.toml  build.rs
raytracer-server/src/: main.rs
raytracer-server/src/example/: client.rs
raytracer-server/src/lib/: default_scene.rs  mod.rs  operation.rs  render.rs  service.rs
