[package]
name = "raytracer-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raytracer = { git = "https://github.com/pprettysimpple/raytracer", version = "0.1.0" }

tonic = "0.8.2"
prost = "0.11"
tokio = { version = "1.22.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.11"

image = "0.24.5"
rayon = "1.6.0"


[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
tokio-test = "0.4.2"
